feat: added page specific metatags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terminal Industries - Reinventing the Future of Logistics</title>
     <meta name="description" content="Revolutionary AI-powered Yard Operating System (YOS™) that transforms logistics through computer vision and autonomous workflows." />
-    <meta name="author" content="Terminal Industries" />
+
+  <!-- SEO Meta Tags (Placeholder Content) -->
+  <meta name="keywords" content="placeholder, keywords, here, logistics, terminal, industry" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#22c55e" />
+  <meta name="copyright" content="Terminal Industries" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="distribution" content="global" />
+  <meta name="rating" content="general" />
+  <meta name="subject" content="Placeholder subject for SEO" />
+  <meta name="url" content="https://yourdomain.com/" />
+  <meta name="identifier-URL" content="https://yourdomain.com/" />
+  <meta name="category" content="Placeholder Category" />
 
     <meta property="og:title" content="Terminal Industries - Reinventing the Future of Logistics" />
     <meta property="og:description" content="Revolutionary AI-powered Yard Operating System (YOS™) that transforms logistics through computer vision and autonomous workflows." />
